cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/tau_event.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/tau_event.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------------------------
  (1/1) Edge has an explicit 'tau' event.
  ---------------------------------------
   * In location "a.a":
     - edge tau when true;
            ^
